# paint.rs

./: Cargo.toml  default.nix  flake.nix  shell.nix
.github/workflows/: release.yaml
crates/cmd/: Cargo.toml
